# SimpleProject

./: .gitignore
Calculus/: CMakeLists.txt  compare.py  derivative.hpp  integral.hpp  main.cpp
Graph2D/: BasicTextDraw.py  File.kv  README.md  Renderer3D.py  Round2DRender.py  Round2Dtemplate.py  custom_common_widget.py  data.csv  glcanvas.py  graph.py  graph2d.py  graph3d.py  mesh.py  util.py
Graph2D/data/: bottle.csv  bottle.gnu  bottle.jl  mesh.csv  parametric3d.csv  parametric3d_ex2.csv
Graph2D/doc/: BasicTextDraw.org  Round2Dtemplate.org
InverseMatrix/: CMakeLists.txt  README.md  args.cpp  args.hpp  args_internal.hpp  ast.cpp  ast.hpp  cal.l  cal.yy  calReader.cpp  calReader.h  calScanner.h  gauss_elimination.cpp  gauss_elimination.hpp  log.cpp  log.hpp  main.cpp
InverseMatrix/script/: matrix.sh  matrix_inverse.sh
